[package]
name = "sharded"
version = "0.0.6"
authors = ["nkconnor <nicholas.k.connor@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Safe, fast, and obvious concurrent collections"
repository = "https://github.com/nkconnor/sharded"
documentation = "https://docs.rs/sharded"
readme = "README.md"

[dependencies]
hashbrown = {version="0.11", features=["raw"]}
parking_lot_utils = {package="parking_lot", version="0.11", optional=true}
ahash_utils = {package="ahash", version ="0.7", optional = true}
fxhash_utils = {package="fxhash", version="0.2", optional=true}
xxhash_utils = {package="twox-hash", version="1", optional=true}

[features]
ahash = ["ahash_utils"]
fxhash = ["fxhash_utils"]
parking_lot = ["parking_lot_utils"]
xxhash = ["xxhash_utils"]
