[package]
name = "sharded"
version = "0.3.0"
authors = ["nkconnor <email@nconnor.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Safe, fast, and obvious concurrent collections"
repository = "https://github.com/nkconnor/sharded"
documentation = "https://docs.rs/sharded"
readme = "README.md"

[lib]
doctest = false

[dependencies]
hashbrown = {version="0.12", features=["inline-more", "raw"], default-features=false}
parking_lot = "0.12"
