[package]
name = "sharded_benches"
version = "0.0.1"
authors = ["nkconnor <nicholas.k.connor@gmail.com>"]
edition = "2018"

[profile.release]
codegen-units = 1
panic = "abort"
lto = true

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "ec2"
path = "src/ec2.rs"

[dependencies]
sharded = { path = "../", features=["hashbrown", "ahash", "parking_lot"] }
parking_lot = "0.11"
hashbrown = "0.8.2"
ahash = "0.4.4"
dashmap = "3.11.10"
uuid = { version = "0.8", features=["v4"] }
flurry = "0.3.0"
bustle = "0.4.1"
num_cpus = "1.13.0"
tracing = "0.1"
tracing-subscriber = "0.2.4"
tracing-serde = "0.1"
serde_json = "1"
fxhash = "0.2.1"
chashmap = "2.2.2"
contrie = "0.1.4"
crossbeam-epoch = "0.8"
crossbeam-epoch-old = { package = "crossbeam-epoch", version = "0.7" }
tsunami = "0.11.0-beta.9"

# snmalloc-rs = "0.2.13"

[dev-dependencies]
criterion = "0.3"


[[bench]]
name = "simple"
harness = false
