[package]
name = "sharded_benches"
version = "0.0.1"
authors = ["nkconnor <nicholas.k.connor@gmail.com>"]
edition = "2018"

[profile.release]
opt-level = 3
codegen-units = 1
panic = "abort"
lto = true
incremental = false

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
sharded = { path = "../", features=["ahash", "parking_lot"] }
parking_lot = "0.11"
hashbrown = "0.11"
ahash = "0.7.4"
dashmap = "4.0.2"
uuid = { version = "0.8", features=["v4"] }
flurry = "0.3.0"
bustle = "0.4.2"
num_cpus = "1.13.0"
tracing = "0.1"
tracing-subscriber = "0.2.4"
tracing-serde = "0.1"
serde_json = "1"
fxhash = "0.2.1"
chashmap = "2.2.2"
contrie = "0.1.4"
crossbeam-epoch = "0.8"
crossbeam-epoch-old = { package = "crossbeam-epoch", version = "0.7" }

[dev-dependencies]
criterion = "0.3"


[[bench]]
name = "simple"
harness = false
